#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

=======
Tag: V00-03-38
2016-02-22 Mikhail S. Dubrovin
- AreaDetector.py, PyDetectorAccess.py - add methods save_txtnda, load_txtnda (PSAS-139)
- add ex_save_load_nda.py, update ex_all_dets.py

Tag: V00-03-37
2016-02-19 Mikhail S. Dubrovin
- in PyDetectorAccess.py and AreaDetector.py add method point_indexes.
- add ex_andor3d_config.py, update ex_all_dets.py
	
Tag: V00-03-36
2016-02-12 Mikhail S. Dubrovin
- PyDetectorAccess.raw_data_cspad2x2 - hide configuration wornings under pbits (PSAS-139)

Tag: V00-03-35
2016-02-11 Christopher O'Grady
- Remove print statement from ControlDataDetector

Tag: V00-03-34
2016-02-11 Mikhail S. Dubrovin
- PyDetectorAccess - update raw_data_andor, raw_data_cspad2x2 - return data even for roiMask=1 (PSAS-139)
- AreaDetector - do not reshape andor3d ndarray from data

Tag: V00-03-33
2016-02-09 Mikhail S. Dubrovin
- add ex_andor3d.py
	
Tag: V00-03-32
2016-02-08 Mikhail S. Dubrovin
- add support for Andor3d (PSAS-139)
    - PyDataAccess.py - add get_andor_config_object, get_andor_data_object
    - PyDetectorAccess.py - update raw_data_andor, raw_data_pnccd, ex_all_dets.py, GlobalUtils.py
    - DetectorTypes.py - add DualAndor
	
Tag: V00-03-31
2016-02-08 Mikhail S. Dubrovin
- AreaDetector.py - in image() check if nda is None before nda = two2x1ToData2x2(nda) (PSAS-139) 
	
Tag: V00-03-30
2016-01-29 Christopher O'Grady
- Add eventCodes method to evr

Tag: V00-03-29
2016-01-28 Mikhail S. Dubrovin
- add examples/ex_save_mec_cspad*_imges_in_tiff.py (PSAS-211)

Tag: V00-03-28
2016-01-27 Mikhail S. Dubrovin